package entity;

import java.util.ArrayList;
import java.util.Date;
import java.util.List;

/**
 * Represents an order placed by a user for a client
 */
public class Order {
    private Long id;
    private Date orderDate;
    private double totalAmount;
    private User user;
    private Client client;
    private List<OrderLine> orderLines;

    public Order() {
        this.orderDate = new Date();
        this.orderLines = new ArrayList<>();
    }

    public Order(User user, Client client) {
        this();
        this.user = user;
        this.client = client;
    }

    //Getter and setter

    public Long getId() {
        return id;
    }

    public void setId(Long id) {
        this.id = id;
    }

    public Date getOrderDate() {
        return orderDate;
    }

    public void setOrderDate(Date orderDate) {
        this.orderDate = orderDate;
    }

    public double getTotalAmount() {
        return totalAmount;
    }

    public void setTotalAmount(double totalAmount) {
        this.totalAmount = totalAmount;
    }

    public User getUser() {
        return user;
    }

    public void setUser(User user) {
        this.user = user;
    }

    public Client getClient() {
        return client;
    }

    public void setClient(Client client) {
        this.client = client;
    }

    public List<OrderLine> getOrderLines() {
        return orderLines;
    }

    public void setOrderLines(List<OrderLine> orderLines) {
        this.orderLines = orderLines;
    }

    public void addOrderLine(OrderLine orderLine){
        this.orderLines.add(orderLine);
        orderLine.setOrder(this);
    }

    public void calculateTotalAmount(){
        this.totalAmount = orderLines.stream()
                .mapToDouble(line -> line.getUnitPrice() * line.getQuantity()).sum();
    }

    @Override
    public String toString() {
        return "Order n°" + id + ":\nclient: " + (client != null ? client.getFirstName() + client.getLastName() : "null") + "\ndate: " + orderDate + "\ntotal: " + totalAmount;
    }

}
